Added Api Documentation with Swagger

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.datasource.username=root
 spring.datasource.password=root
 
 spring.jpa.hibernate.ddl-auto=update
+
+springdoc.paths-to-match=/api/employees/**
+springdoc.packages-to-scan=com.example.demo.controller 
