Included Refresh Token

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,6 @@ spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 
 springdoc.paths-to-match=/api/employees/**
-springdoc.packages-to-scan=com.example.demo.controller 
+springdoc.packages-to-scan=com.example.demo.controller
+
+jwt.secret=my-very-secret-key 
